--- a/_config.yml
+++ b/_config.yml
@@ -86,4 +86,5 @@ exclude_generator:
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: github
+  repo: git@github.com:oligriffiths/blog.git
