Added RSS generator

--- a/_config.yml
+++ b/_config.yml
@@ -83,6 +83,11 @@ disqus_shortname: makegoodcode
 theme: landscape
 exclude_generator:
 
+feed:
+    type: atom
+    path: atom.xml
+    limit: 20
+    
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
