--- a/_config.yml
+++ b/_config.yml
@@ -93,5 +93,5 @@ feed:
 deploy:
   type: git
   repo: git@github.com:oligriffiths/blog.git
-  branch: gh-pages
+  branch: master
   message: hexo deploy
