--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: MakeGoodCode
+title: Oli Griffiths
 subtitle: Ramblings of a software architect
 description:
 author: Oli Griffiths
@@ -12,7 +12,7 @@ language:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://www.makegoodcode.com
+url: http://www.oligriffiths.com
 root: /
 permalink: :year/:month/:day/:title/
 tag_dir: tags
@@ -75,7 +75,7 @@ per_page: 10
 pagination_dir: page
 
 # Disqus
-disqus_shortname: makegoodcode
+disqus_shortname: oligriffiths
 
 # Extensions
 ## Plugins: https://github.com/hexojs/hexo/wiki/Plugins
