--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "hexo": {
     "version": "3.7.1"
   },
+  "scripts":{
+    "deploy":"hexo generate && hexo deploy"
+  },
   "dependencies": {
     "hexo": "^3.1.0",
     "hexo-deployer-git": "0.0.4",
@@ -17,5 +20,8 @@
     "hexo-renderer-stylus": "^0.2.0",
     "hexo-server": "^0.1.2",
     "hexo-toc": "^1.1.0"
+  },
+  "devDependencies": {
+    "hexo-cli": "^1.1.0"
   }
 }
