--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "version": "3.7.1"
   },
   "scripts":{
+    "serve": "hexo server",
     "deploy":"hexo generate && hexo deploy"
   },
   "dependencies": {
