--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "scripts":{
     "serve": "hexo server",
+    "generate": "hexo generate",
     "deploy":"hexo generate && hexo deploy"
   },
   "dependencies": {
